# p3-analysis-library

./: .bandit  .pre-commit-config.yaml  .zenodo.json  CITATION.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  analysis.html  data.html  genindex.html  index.html  introduction.html  modules.html  notices-and-disclaimers.html  objects.inv  p3.data.html  p3.html  p3.metrics.html  p3.plot.html  p3.report.html  p3analysis.data.html  p3analysis.html  p3analysis.metrics.html  p3analysis.plot.backend.html  p3analysis.plot.html  p3analysis.report.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-unittest.yml  commit-signoff-check.yml  lint-format.yml  run-precommit.yml  test-gallery.yml
_downloads/0578bfaf7af2be312ae446ace5180d38/: plot_simple_cascade.ipynb
_downloads/07075ea048bb69f84e56a96405892fba/: plot_customized_navchart.ipynb
_downloads/2552e62e0a77fd0b0546cdf90383adad/: plot_simple_cascade.py
_downloads/310b4df53d89925b24f6b7bc3e4d3ec2/: plot_babelstream_cascade.ipynb
_downloads/36eb5c73460de2b4f5af873867d4d962/: plot_customized_cascade.ipynb
_downloads/417730b0904deb5a67bfcfa392303195/: plot_simple_navchart.ipynb
_downloads/445b85ee23078a89243e2303f371ee91/: projection.ipynb
_downloads/4fc66f9a9f7717a6f401e66bb1256966/: plot_simple_navchart.py
_downloads/50b189a0f6c8c40714768470ea6ba889/: multiple_components.ipynb
_downloads/7b771bddd0782685a73c72442585bd5b/: multiple_components.py
_downloads/7b9e708df771ebd154427a5a10ba5150/: plot_babelstream_navchart.py
_downloads/bc8e97bbfe262a17fbb42353e9e5c42f/: plot_babelstream_cascade.py
_downloads/cda5bdd84eac85cdf77eb751d123eeaa/: plot_babelstream_navchart.ipynb
_downloads/df0ea69ce19157e4de3a35a149e1a089/: application_efficiency.ipynb
_downloads/edc26f90f5285983edbd8cc895430081/: projection.py
_sources/: analysis.rst.txt  data.rst.txt  index.rst.txt  introduction.rst.txt  modules.rst.txt  notices-and-disclaimers.rst.txt  p3analysis.data.rst.txt  p3analysis.report.rst.txt  sg_execution_times.rst.txt
_sources/case-studies/: index.rst.txt  sg_execution_times.rst.txt
_sources/examples/: index.rst.txt
case-studies/: README.rst  index.html  sg_execution_times.html
case-studies/babelstream/: README.rst  coverage.csv  index.html  (+6 more)
docs/: Makefile
examples/: README.rst  index.html  sg_execution_times.html
p3/: __init__.py  _utils.py
p3analysis/: __init__.py  _utils.py
tests/: README.md
(+105 files in other folders)
