[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {"name" = "S. John Pennycook", "email" = "john.pennycook@intel.com"},
  {"name" = "Jason Sewall"},
  {"name" = "Douglas Jacobsen"},
  {"name" = "Tom Deakin", "email" = "tom.deakin@bristol.ac.uk"},
  {"name" = "Yuliana Zamora", "email" = "yuliana.zamora@intel.com"},
  {"name" = "Kin Long Kelvin Lee", "email" = "kin.long.kelvin.lee@intel.com"}
]
description = "Performance, Portability and Productivity Analysis Library"
dynamic = ["version", "readme"]
keywords = ["performance", "portability", "productivity"]
name = "p3analysis"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "numpy==2.2.4",
  "pandas==2.2.3",
  "matplotlib==3.10.1",
  "jsonschema==4.23.0",
]

[project.optional-dependencies]
dev = [
  "sphinx",
  "sphinx-gallery",
  "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["p3analysis*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "p3analysis.__version__"}
